--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -106,7 +106,7 @@
             </div>
             <ul class="nav nav-primary">
               <li class="nav-item active">
-                <a data-toggle="collapse" href="{% url 'dashboard_chart' %}" class="collapsed" aria-expanded="false">
+                <a data-toggle="collapse" href="#dashboard" class="collapsed" aria-expanded="false">
                   <i class="fas fa-home"></i>
                   <p>Dashboard</p>
                   <span class="caret"></span>
@@ -114,7 +114,7 @@
                 <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="#">
+                      <a href="{% url 'dashboard_chart' %}">
                         <span class="sub-item">Dashboard 1</span>
                       </a>
                     </li>
