Revert "fire incident"
This reverts commit 831528c81825f2717ca55da254fe4db73c88a7d5.

--- a/projectsite/templates/map_station.html
+++ b/projectsite/templates/map_station.html
@@ -58,7 +58,7 @@
     iconSize: [50, 50]
     });
 
-  
+  // Example marker using truck icon
     L.marker([9.83369118406607, 118.72275445554], { icon: truckIcon }).addTo(map)
         .bindPopup("Sta. Lourdes");
 
