--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -114,7 +114,7 @@
                 <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="{% url 'dashboard_chart' %}">
+                      <a href="#">
                         <span class="sub-item">Dashboard 1</span>
                       </a>
                     </li>
