--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -114,7 +114,7 @@
                 <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="#">
+                      <a href="{% url 'dashboard_chart' %}">
                         <span class="sub-item">Dashboard 1</span>
                       </a>
                     </li>
@@ -171,7 +171,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="{% url 'map_incidents'%}">
+                      <a href="{% url 'map_incidents' %}">
                         <span class="sub-item">Fire Incidents</span>
                       </a>
                     </li>
@@ -259,9 +259,8 @@
     <script src="{% static 'js/plugin/jqvmap/maps/jquery.vmap.world.js' %}"></script>
     <script src="{% static 'js/plugin/sweetalert/sweetalert.min.js' %}"></script>
     <script src="{% static 'js/atlantis.min.js' %}"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% block chart %}
-
     {% endblock %}
   </body>
 </html>
