another chart fixes

--- a/projectsite/templates/chart.html
+++ b/projectsite/templates/chart.html
@@ -99,6 +99,7 @@
                     <div class="chart-container">
                         <canvas id="multipleBarChart"></canvas>
                     </div>
+                    <div id="multiBarStats"></div>
                 </div>
             </div>
         </div>
@@ -232,33 +233,29 @@
     fetch("/multilineChart/")
         .then(response => response.json())
         .then(result_with_month_names => {
-            var countries = Object.keys(result_with_month_names);
+            var cities = Object.keys(result_with_month_names);
             var incidentCounts = [];
             var incidentCounts2 = [];
             var incidentCounts3 = [];
 
-            // Function to sort object keys by month
             function sortObjectKeys(obj) {
                 return Object.keys(obj).sort((a, b) => parseInt(a) - parseInt(b));
             }
 
-            // Extract incident counts for each country
-            if (countries.length >= 1) {
-                var country1_data = result_with_month_names[countries[0]];
-                var sortedKeys1 = sortObjectKeys(country1_data);
-                incidentCounts = sortedKeys1.map(key => country1_data[key]);
+            if (cities.length >= 1) {
+                var city1_data = result_with_month_names[cities[0]];
+                var sortedKeys1 = sortObjectKeys(city1_data);
+                incidentCounts = sortedKeys1.map(key => city1_data[key]);
             }
-
-            if (countries.length >= 2) {
-                var country2_data = result_with_month_names[countries[1]];
-                var sortedKeys2 = sortObjectKeys(country2_data);
-                incidentCounts2 = sortedKeys2.map(key => country2_data[key]);
+            if (cities.length >= 2) {
+                var city2_data = result_with_month_names[cities[1]];
+                var sortedKeys2 = sortObjectKeys(city2_data);
+                incidentCounts2 = sortedKeys2.map(key => city2_data[key]);
             }
-
-            if (countries.length >= 3) {
-                var country3_data = result_with_month_names[countries[2]];
-                var sortedKeys3 = sortObjectKeys(country3_data);
-                incidentCounts3 = sortedKeys3.map(key => country3_data[key]);
+            if (cities.length >= 3) {
+                var city3_data = result_with_month_names[cities[2]];
+                var sortedKeys3 = sortObjectKeys(city3_data);
+                incidentCounts3 = sortedKeys3.map(key => city3_data[key]);
             }
 
             var multipleLineChart = document.getElementById("multipleLineChart").getContext("2d");
@@ -269,44 +266,18 @@
                     labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
                     datasets: [
                         {
-                            label: countries[0],
+                            label: cities[0],
                             borderColor: "#1d7af3",
-                            pointBorderColor: "#FFF",
-                            pointBackgroundColor: "#1d7af3",
-                            pointBorderWidth: 2,
-                            pointHoverRadius: 4,
-                            pointHoverBorderWidth: 1,
-                            pointRadius: 4,
-                            backgroundColor: "transparent",
-                            borderWidth: 2,
                             data: incidentCounts
                         },
                         {
-                            label: countries[1],
+                            label: cities[1],
                             borderColor: "#5905",
-                            pointBorderColor: "#FFF",
-                            pointBackgroundColor: "#5905",
-                            pointBorderWidth: 2,
-                            pointHoverRadius: 4,
-                            pointHoverBorderWidth: 1,
-                            pointRadius: 4,
-                            backgroundColor: "transparent",
-                            fill: true,
-                            borderWidth: 2,
                             data: incidentCounts2
                         },
                         {
-                            label: countries[2],
+                            label: cities[2],
                             borderColor: "#f3545d",
-                            pointBorderColor: "#FFF",
-                            pointBackgroundColor: "#f3545d",
-                            pointBorderWidth: 2,
-                            pointHoverRadius: 4,
-                            pointHoverBorderWidth: 1,
-                            pointRadius: 4,
-                            backgroundColor: "transparent",
-                            fill: true,
-                            borderWidth: 2,
                             data: incidentCounts3
                         }
                     ]
@@ -314,23 +285,7 @@
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
-                    legend: {
-                        position: "top"
-                    },
-                    tooltips: {
-                        bodySpacing: 4,
-                        mode: "nearest",
-                        intersect: false,
-                        position: "nearest",
-                        xPadding: 10,
-                        yPadding: 10,
-                        caretPadding: 10
-                    },
-                    layout: {
-                        padding: {
-                            left: 15, right: 15, top: 15, bottom: 15
-                        }
-                    }
+                    legend: { position: "top" }
                 }
             });
         })
@@ -420,6 +375,14 @@
                     }
                 }
             });
+
+            // After extracting incidentCountMajor, incidentCountMinor, incidentCountModerate
+            var totalMajor = incidentCountMajor.reduce((a, b) => a + b, 0);
+            var totalMinor = incidentCountMinor.reduce((a, b) => a + b, 0);
+            var totalModerate = incidentCountModerate.reduce((a, b) => a + b, 0);
+
+            document.getElementById("multiBarStats").innerHTML =
+              `Minor: ${totalMinor} &nbsp; | &nbsp; Moderate: ${totalModerate} &nbsp; | &nbsp; Major: ${totalMajor}`;
         })
         .catch(error => console.error("Error:", error));
     }
