--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -192,7 +192,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="charts/sparkline.html">
+                      <a href="#">
                         <span class="sub-item">Sparkline</span>
                       </a>
                     </li>
@@ -200,14 +200,41 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a href="widgets.html">
+                <a href="{% url 'location-list' %}">
                   <i class="fas fa-desktop"></i>
-                  <p>Widgets</p>
-                  <span class="badge badge-success">4</span>
+                  <p>Locations</p>
                 </a>
               </li>
-              
-              
+              <li class="nav-item">
+                <a href="{% url 'incident-list' %}">
+                  <i class="fas fa-desktop"></i>
+                  <p>Incidents</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#">
+                  <i class="fas fa-desktop"></i>
+                  <p>Fire Stations</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#">
+                  <i class="fas fa-desktop"></i>
+                  <p>Fire Fighters</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#">
+                  <i class="fas fa-desktop"></i>
+                  <p>Fire Trucks</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#">
+                  <i class="fas fa-desktop"></i>
+                  <p>Weather Conditions</p>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
