--- a/projectsite/templates/incidents_del.html
+++ b/projectsite/templates/incidents_del.html
@@ -6,17 +6,18 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Add New Organization</div>
+                        <div class="card-title">Delete Incident</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
                             <form action="" method="post" novalidate>
+                                <p>Are you sure you want to delete "{{ object }}"?</p>
                                 {% csrf_token %}
                                 {% include 'includes/form.html' %}
                                 <div class="form-group">
                                     <div class="col-md-12 col-sm-3">
-                                        <button type="submit" class="btn btn-primary btn-rounded">Submit</button>
+                                        <button type="submit" class="btn btn-primary btn-rounded">Delete</button>
                                     </div>
                                 </div>
                             </form>
