--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -212,7 +212,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#">
+                <a href="{% url 'firestations-list' %}">
                   <i class="fas fa-desktop"></i>
                   <p>Fire Stations</p>
                 </a>
