--- a/projectsite/templates/firestations_del.html
+++ b/projectsite/templates/firestations_del.html
@@ -6,7 +6,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Delete Firestation</div>
+                        <div class="card-title">Delete Fire Station</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
                     <div class="col-md-6">
