--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -218,7 +218,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#">
+                <a href="{% url 'firefighters-list' %}">
                   <i class="fas fa-desktop"></i>
                   <p>Fire Fighters</p>
                 </a>
