--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -224,7 +224,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#">
+                <a href="{% url 'firetrucks-list' %}">
                   <i class="fas fa-desktop"></i>
                   <p>Fire Trucks</p>
                 </a>
