--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -230,7 +230,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#">
+                <a href="{% url 'weathercon-list' %}">
                   <i class="fas fa-desktop"></i>
                   <p>Weather Conditions</p>
                 </a>
