--- a/projectsite/templates/firefighters_list.html
+++ b/projectsite/templates/firefighters_list.html
@@ -6,7 +6,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">List of Fire Stations</div>
+                        <div class="card-title">List of Fire Fighters</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
                     <br />
