--- a/projectsite/templates/weathercon_add.html
+++ b/projectsite/templates/weathercon_add.html
@@ -6,7 +6,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Edit Fire Truck</div>
+                        <div class="card-title">Add New Weather Condition</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
                     <div class="col-md-6">
