--- a/projectsite/templates/weathercon_list.html
+++ b/projectsite/templates/weathercon_list.html
@@ -6,13 +6,13 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">List of Fire Trucks</div>
+                        <div class="card-title">List of Weather Conditions</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
                     <br />
                         <div class="col-md-12 row">
                             <div class="col-md-6">
-                                <form class="navbar-left navbar-form nav-search mr-md-3" action="{% url 'firetrucks-list' %}">
+                                <form class="navbar-left navbar-form nav-search mr-md-3" action="{% url 'weathercon-list' %}">
                                     <div class="input-group">
                                         <input type="text" placeholder="Search ..." class="form-control" name="q" />
                                         <div class="input-group-append">
@@ -25,7 +25,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="pull-right">
-                                    <a href="{% url 'firetrucks-add' %}" class="btn btn-success btn-rounded">Add Fire Truck</a>
+                                    <a href="{% url 'weathercon-add' %}" class="btn btn-success btn-rounded">Add Weather Condition</a>
                                 </div>
                             </div>
                         </div>
@@ -33,28 +33,30 @@
                         <table class="table table-striped mt-3">
                             <thead>
                                 <tr>
-                                    <th scope="col">Truck Number</th>
-                                    <th scope="col">Model</th>
-                                    <th scope="col">Capacity</th>
-                                    <th scope="col">Station</th>
+                                    <th scope="col">Incident</th>
+                                    <th scope="col">Temperature</th>
+                                    <th scope="col">Humidity</th>
+                                    <th scope="col">Wind Speed</th>
+                                    <th scope="col">Weather Description</th>
                                     <th scope="col">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for object in object_list %}
                                 <tr>
-                                    <td>{{ object.truck_number }}</td>
-                                    <td>{{ object.model }}</td>
-                                    <td>{{ object.capacity }}</td>
-                                    <td>{{ object.station.name }}</td>
+                                    <td>{{ object.incident }}</td>
+                                    <td>{{ object.temperature }}</td>
+                                    <td>{{ object.humidity }}</td>
+                                    <td>{{ object.wind_speed }}</td>
+                                    <td>{{ object.weather_description }}</td>
                                     <td>
-                                        <a href="{% url 'firetrucks-update' object.id %}">Edit</a>
-                                        <a href="{% url 'firetrucks-delete' object.id %}" class="text-danger ml-2">Delete</a>
+                                        <a href="{% url 'weathercon-update' object.id %}">Edit</a>
+                                        <a href="{% url 'weathercon-delete' object.id %}" class="text-danger ml-2">Delete</a>
                                     </td>
                                 </tr>
                                 {% empty %}
                                 <tr>
-                                    <td colspan="5" style="text-align: center">
+                                    <td colspan="6" style="text-align: center">
                                         <p class="text-sm font-weight-bold mb-0">No Records Found</p>
                                     </td>
                                 </tr>
