--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -159,7 +159,7 @@
               
               <li class="nav-item">
                 <a data-toggle="collapse" href="#maps">
-                  <i class="fas fa-map-marker-alt"></i>
+                  <i class="fas fa-map"></i>
                   <p>Maps</p>
                   <span class="caret"></span>
                 </a>
@@ -187,7 +187,7 @@
                 <div class="collapse" id="charts">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="#">
+                      <a href="{% url 'dashboard_chart' %}">
                         <span class="sub-item">Chart Js</span>
                       </a>
                     </li>
@@ -201,37 +201,37 @@
               </li>
               <li class="nav-item">
                 <a href="{% url 'location-list' %}">
-                  <i class="fas fa-desktop"></i>
+                  <i class="fas fa-map-marker-alt"></i>
                   <p>Locations</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'incident-list' %}">
-                  <i class="fas fa-desktop"></i>
+                  <i class="fas fa-fire"></i>
                   <p>Incidents</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'firestations-list' %}">
-                  <i class="fas fa-desktop"></i>
+                  <i class="fas fa-building"></i>
                   <p>Fire Stations</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'firefighters-list' %}">
-                  <i class="fas fa-desktop"></i>
+                  <i class="fas fa-users"></i>
                   <p>Fire Fighters</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'firetrucks-list' %}">
-                  <i class="fas fa-desktop"></i>
+                  <i class="fas fa-truck"></i>
                   <p>Fire Trucks</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'weathercon-list' %}">
-                  <i class="fas fa-desktop"></i>
+                  <i class="fas fa-cloud-sun"></i>
                   <p>Weather Conditions</p>
                 </a>
               </li>
